--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <title>Document</title>
 </head>
 <body>
-
-<div class="container">
-  <img src="./imagem/Comunidade.jpg" alt="Descrição da Imagem" style="width:100%;">
-  <div class="texto-sobre-imagem">
-    <h2>Missão da Capelania Social</h2>
-    <h3>A missão da Capelania Social é apoiar e empoderar a comunidade, oferecendo serviços essenciais e
-        criando um ambiente acolhedor para aqueles que precisam de ajuda.</h3>
-        <button id="btn1">Saiba Mais</button>
-        <button id="btn2">Doe Agora</button>
-
-  </div>
-</div>
-
+    <div>
+        <img src="./imagem/img1.jpg" id="img1" >
+        <div id="texto1">
+            <h1>Missão da Capelania Social</h1>
+            <p>
+                A missão da Capelania Social é apoiar e empoderar a comunidade, oferecendo serviços essenciais e 
+                criando um ambiente acolhedor para aqueles que precisam de ajuda.
+            </p>
+            <button id="btn1">Saiba Mais</button>
+            <button id="btn2">Doe Agora</button>
+        </div>
+    </div>
 </body>
 </html>
